--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dev-utils": "^7.0.5",
     "react-dom": "^16.8.5",
     "react-redux": "^5.0.7",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.0",
     "tslint": "^5.18.0"
   },
@@ -48,7 +48,7 @@
     "@types/react-dom": "^16.8.5",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
-    "azure-devops-extension-api": "^1.154.1",
+    "azure-devops-extension-api": "^1.153.2",
     "azure-devops-extension-sdk": "^2.0.11",
     "azure-devops-ui": "^1.155.0",
     "core-js": "^3.1.4",
